force-app/main/objects/InvoiceRevenueScheduleItem__c.object
<CustomObject>
    <fields>
        <fullName>IM_LookupCode_Reference__c</fullName>
        <label>IM Lookup Code Reference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IM1</fullName>
                </value>
                <value>
                    <fullName>IM2</fullName>
                </value>
                <value>
                    <fullName>IM3</fullName>
                </value>
                <value>
                    <fullName>IM4</fullName>
                </value>
                <value>
                    <fullName>IM5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IM_LookupCode__c</fullName>
        <formula>CASE( IM_LookupCode_Reference__c, 
&apos;IM1&apos;, TEXT(Invoice_Request__r.IM1_LookupCode__c), 
&apos;IM2&apos;, TEXT(Invoice_Request__r.IM2_LookupCode__c), 
&apos;IM3&apos;, TEXT(Invoice_Request__r.IM3_LookupCode__c), 
&apos;IM4&apos;, TEXT(Invoice_Request__r.IM4_LookupCode__c), 
&apos;IM5&apos;, TEXT(Invoice_Request__r.IM5_LookupCode__c),
&quot;None&quot;
)</formula>
        <label>IM LookupCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Request</label>
        <referenceTo>Project_Invoice__c</referenceTo>
        <relationshipLabel>Invoice Revenue Schedule</relationshipLabel>
        <relationshipName>InvoiceRevenueScheduleItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <inlineHelpText>Please select the month that the revenue will be recognised in. This should reflect the forecast on the opportunity.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMonth__c</fullName>
        <formula>tEXT(MONTH(Month__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RYear__c</fullName>
        <formula>TEXT(YEAR(Month__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Invoice Revenue Schedule Item</label>
    <nameField>
        <displayFormat>InvRS{0000000}</displayFormat>
        <label>Invoice Revenue Schedule Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Revenue Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>